<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="19dp"
        android:text="@string/curp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/button2" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtApeP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="111dp"
        android:text="@string/apellido_paterno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="6dp"
        android:text="@string/apellido_materno"
        app:layout_constraintBottom_toTopOf="@+id/txtApeM"
        app:layout_constraintEnd_toEndOf="@+id/spnLugar"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="195dp"
        android:text="@string/dia"
        app:layout_constraintEnd_toStartOf="@+id/txtApeP"
        app:layout_constraintStart_toStartOf="@+id/txtApeP"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtApeP"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <EditText
        android:id="@+id/txtApeM"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/spnMes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtApeP"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <Spinner
        android:id="@+id/spnDia"
        android:layout_width="141dp"
        android:layout_height="51dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApeM" />

    <Spinner
        android:id="@+id/spnMes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/txtApeM"
        app:layout_constraintStart_toEndOf="@+id/txtApeP"
        app:layout_constraintTop_toBottomOf="@+id/txtApeP" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:text="@string/mes"
        app:layout_constraintStart_toStartOf="@+id/txtApeM"
        app:layout_constraintTop_toBottomOf="@+id/txtApeM" />

    <Spinner
        android:id="@+id/spnAn"
        android:layout_width="154dp"
        android:layout_height="44dp"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="19dp"
        android:text="@string/a_o"
        app:layout_constraintBottom_toTopOf="@+id/spnAn"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spnSex"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/spnMes"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="19dp"
        android:text="@string/sexo"
        app:layout_constraintBottom_toTopOf="@+id/spnSex"
        app:layout_constraintStart_toStartOf="@+id/spnSex" />

    <Spinner
        android:id="@+id/spnLugar"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="235dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="8dp"
        android:text="@string/lugar_de_nacimiento"
        app:layout_constraintBottom_toTopOf="@+id/spnLugar"
        app:layout_constraintStart_toStartOf="@+id/spnLugar" />

    <Button
        android:id="@+id/btnGenerar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/generar"
        app:layout_constraintBottom_toTopOf="@+id/message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="37dp"
        android:text="@string/limpiar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnGenerar" />

</androidx.constraintlayout.widget.ConstraintLayout>